# ecs-demo

./: Cargo.toml
crates/vct_ecs/: Cargo.toml
crates/vct_os/: Cargo.toml  README.md
crates/vct_os/src/: cfg.rs  lib.rs
crates/vct_os/src/sync/: mod.rs
crates/vct_os/src/thread/: mod.rs
crates/vct_os/src/time/: mod.rs
crates/vct_platform/: Cargo.toml  README.md
crates/vct_platform/src/: cfg.rs  hash.rs  lib.rs  thread.rs  time.rs
crates/vct_platform/src/cell/: sync_cell.rs  sync_unsafe_cell.rs
crates/vct_platform/src/collections/: hash_map.rs  hash_set.rs  mod.rs
crates/vct_ptr/: Cargo.toml
crates/vct_ptr/src/: lib.rs
crates/vct_reflect/: Cargo.toml
crates/vct_reflect/derive/: Cargo.toml
crates/vct_reflect/derive/src/: lib.rs  reflect_docs.rs  reflect_trait.rs  type_path.rs
crates/vct_reflect/derive/src/attributes/: container.rs  custom.rs  field.rs  mod.rs
crates/vct_reflect/derive/src/derive_data/: impls.rs  mod.rs  reflect_derive.rs  reflect_enum.rs  reflect_meta.rs  reflect_struct.rs  reflect_type_path.rs  struct_field.rs
crates/vct_reflect/derive/src/derive_data/attributes/: custom_attributes.rs  field_attributes.rs  flags.rs  mod.rs  reflect_docs.rs  type_attributes.rs
crates/vct_reflect/derive/src/impls/: impl_enum.rs  impl_opaque.rs  impl_struct.rs  impl_trait_enum.rs  impl_trait_from_reflect.rs  impl_trait_get_type_traits.rs  impl_trait_reflect.rs  impl_trait_struct.rs  impl_trait_tuple_struct.rs  impl_trait_type_path.rs  impl_trait_typed.rs  impl_tuple_struct.rs  impl_unit.rs  match_reflect_impls.rs  mod.rs
crates/vct_reflect/derive/src/path/: cell.rs  fp.rs  info.rs  mod.rs  ops.rs  registry.rs
crates/vct_reflect/derive/src/utils/: mod.rs  string_expr.rs  terminated_parser.rs  wrap_in_option.rs
crates/vct_reflect/src/: __macro_exports.rs  cell.rs  lib.rs
crates/vct_reflect/src/access/: access_impl.rs  accessor.rs  mod.rs  parse.rs  path.rs  path_access.rs  reflect_access.rs  string_parser.rs
crates/vct_reflect/src/impls/: mod.rs  native_tuple.rs
crates/vct_reflect/src/impls/native/: native_number.rs  native_string.rs  native_tuple.rs
crates/vct_reflect/src/info/: array_info.rs  attributes.rs  const_param_data.rs  docs_macro.rs  enum_info.rs  fields.rs  generics.rs  list_info.rs  map_info.rs  mod.rs  opaque_info.rs  set_info.rs  struct_info.rs  tuple_info.rs  tuple_struct_info.rs  type_info_impl.rs  type_info_stack.rs  type_path.rs  type_struct.rs  typed.rs  variant_info.rs
crates/vct_reflect/src/ops/: apply_error.rs  array_impl.rs  clone_error.rs  enum_impl.rs  list_impl.rs  map_impl.rs  mod.rs  set_impl.rs  struct_impl.rs  tuple_impl.rs  tuple_struct_impl.rs  variant_impl.rs
crates/vct_reflect/src/reflect/: from_reflect.rs  mod.rs  partial_reflect.rs  reflect_alias.rs  reflect_impl.rs  reflectable.rs
crates/vct_reflect/src/registry/: from_type.rs  get_type_traits.rs  mod.rs  type_registry.rs  type_trait.rs
crates/vct_reflect/src/registry/traits/: clone.rs  default.rs  deserialize.rs  from_ptr.rs  from_reflect.rs  mod.rs  serialize.rs  serialize_from.rs
crates/vct_reflect/src/serde/: skip_field.rs
crates/vct_reflect/src/serde/de/: array_visitor.rs  deserializer.rs  enum_visitor.rs  map_visitor.rs  option_visitor.rs  set_visitor.rs  struct_like_utils.rs  tuple_like_utils.rs  tuple_struct_visitor.rs
crates/vct_reflect/src/serde/ser/: enum_serializer.rs  serializer.rs  struct_serializer.rs  tuple_struct_serializer.rs
crates/vct_tasks/: Cargo.toml
crates/vct_utils/: Cargo.toml  README.md
crates/vct_utils/src/: debug_info.rs  default.rs  hash.rs  is.rs  lib.rs  maps.rs  on_drop.rs  once_flag.rs  parallel_queue.rs  range_invoke.rs
crates/vct_utils/src/cell/: mod.rs  sync_cell.rs  sync_unsafe_cell.rs
crates/vct_utils/src/collections/: hash_map.rs  hash_set.rs  maps.rs  mod.rs
crates/vct_utils/src/name/: debug_name.rs  mod.rs  short_name.rs
crates/vct_utils/src/temp/: concat.rs  mod.rs
src/: lib.rs
