[package]
name = "vct_platform"
version = "0.1.0"
edition = "2024"

[features]
# default = ["std"]
std = []

alloc = []

web = []

critical-section = []

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
