[package]
name = "vct_platform"
version = "0.1.0"
edition = "2024"

[features]

serialize = ["dep:serde", "hashbrown/serde"]
rayon = ["dep:rayon", "hashbrown/rayon"]

web = [
  "dep:web-time",
  "dep:getrandom",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:wasm-bindgen",
]

[dependencies]

foldhash = { version = "0.2.0" }
hashbrown = { version = "0.16.0", features = [
  "equivalent",
  "raw-entry",
], default-features = false }
serde = { version = "1", optional = true }
rayon = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = { version = "0.3" }
web-time = { version = "1.1", optional = true }
getrandom = { version = "0.3.0", optional = true, features = [ "wasm_js"] }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }



[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
