[package]
name = "vct_reflect"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]

std = [
    "vct_utils/std",
    "vct_os/std",
    "serde/std"
]

reflect_docs = []

[dependencies]
vct_utils = { path = "../vct_utils", default-features = false }
vct_os = { path = "../vct_os", default-features = false }

serde = { version = "1", default-features = false, features = ["alloc"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
