[package]
name = "vct_reflect_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
default = ["reflect_docs"]

reflect_docs = []

auto_register = []

auto_register_inventory = ["auto_register"]

auto_register_static = ["auto_register", "dep:uuid"]

[dependencies]
vct_macro_utils = { path = "../../vct_macro_utils" }

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

indexmap = "2.0"
uuid = { version = "1.18", default-features = false, features = [
  "v4",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18", default-features = false, features = ["js"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

